--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^2.6.7",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
