--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "fastclick": "^1.0.6",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^2.6.7",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   },
@@ -24,6 +26,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
